cluster/dev/coder/003-deployment.yaml
---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: coder
  namespace: dev
  labels:
    app: coder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coder


    spec:
      containers:
        - name: coder
          image: 'ghcr.io/coder/coder:latest'
          ports:
            - containerPort: 8123
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
